@@ -1,28 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/plzip/plzip-1.1.ebuild,v 1.1 2014/02/27 10:55:49 mgorny Exp $
-
-EAPI=5
-
-inherit toolchain-funcs
-
-DESCRIPTION="Parallel lzip compressor"
-HOMEPAGE="http://www.nongnu.org/lzip/plzip.html"
-SRC_URI="http://download.savannah.gnu.org/releases-noredirect/lzip/${P}.tar.gz"
-
-LICENSE="GPL-3"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-RDEPEND="app-arch/lzlib"
-
-src_configure() {
-	# not autotools-based
-	./configure \
-		--prefix="${EPREFIX}"/usr \
-		CXX="$(tc-getCXX)" \
-		CPPFLAGS="${CPPFLAGS}" \
-		CXXFLAGS="${CXXFLAGS}" \
-		LDFLAGS="${LDFLAGS}" || die
-}
