@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/plzip/plzip-1.3.ebuild,v 1.1 2015/01/27 15:29:21 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/plzip/plzip-1.3.ebuild,v 1.2 2015/03/10 19:11:59 mgorny Exp $
 
 EAPI=5
 
@@ -15,7 +15,8 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND="app-arch/lzlib"
+RDEPEND="app-arch/lzlib:0="
+DEPEND=${RDEPEND}
 
 src_configure() {
 	# not autotools-based
