@@ -1,11 +1,0 @@
-DEFINED_PHASES=configure
-DESCRIPTION=Parallel lzip compressor
-EAPI=5
-HOMEPAGE=http://www.nongnu.org/lzip/plzip.html
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-3
-RDEPEND=app-arch/lzlib
-SLOT=0
-SRC_URI=http://download.savannah.gnu.org/releases-noredirect/lzip/plzip-1.1.tar.gz
-_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
-_md5_=c0e780064aff115de010cdefbb18662f
