@@ -1,11 +1,12 @@
 DEFINED_PHASES=configure
+DEPEND=app-arch/lzlib:0=
 DESCRIPTION=Parallel lzip compressor
 EAPI=5
 HOMEPAGE=http://www.nongnu.org/lzip/plzip.html
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-3
-RDEPEND=app-arch/lzlib
+RDEPEND=app-arch/lzlib:0=
 SLOT=0
 SRC_URI=http://download.savannah.gnu.org/releases-noredirect/lzip/plzip/plzip-1.3.tar.gz
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
-_md5_=725b447cbe1485765f3b5bac738f7173
+_md5_=11c8d6da2c12d7bb7aa548f22defc128
