@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure postinst postrm prepare setup
-DEPEND=dev-libs/gmp >=dev-libs/ntl-5.5.1 emacs? ( >=virtual/emacs-22 ) sci-mathematics/flint sci-mathematics/4ti2 dev-lang/perl boost? ( dev-libs/boost ) readline? ( sys-libs/readline ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DEPEND=dev-libs/gmp >=dev-libs/ntl-5.5.1 emacs? ( >=virtual/emacs-22 ) sci-mathematics/flint sci-mathematics/4ti2 sci-libs/cddlib dev-lang/perl boost? ( dev-libs/boost ) readline? ( sys-libs/readline ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=Computer algebra system for polynomial computations
 EAPI=5
 HOMEPAGE=http://www.singular.uni-kl.de/
 IUSE=boost doc emacs examples python +readline
 KEYWORDS=~amd64 ~x86 ~x86-linux ~x86-macos
 LICENSE=GPL-2
-RDEPEND=dev-libs/gmp >=dev-libs/ntl-5.5.1 emacs? ( >=virtual/emacs-22 ) sci-mathematics/flint sci-mathematics/4ti2
+RDEPEND=dev-libs/gmp >=dev-libs/ntl-5.5.1 emacs? ( >=virtual/emacs-22 ) sci-mathematics/flint sci-mathematics/4ti2 sci-libs/cddlib
 SLOT=0
 SRC_URI=http://www.mathematik.uni-kl.de/ftp/pub/Math/Singular/SOURCES/4-0-2/singular-4.0.2.tar.gz http://www.mathematik.uni-kl.de/ftp/pub/Math/Singular/SOURCES/4-0-2/singular-4.0.2-share.tar.gz
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	elisp-common	1aa23b3de5dae55456fa2071428eb5bf	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	prefix	21058c21ca48453d771df15500873ede	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=3b6577dec0220cf555792aa9f560bd48
+_md5_=b84979348fa66b98d7945d84dec2db8e
