@@ -4,10 +4,10 @@ DESCRIPTION=Tool for creating compressed filesystem type squashfs
 EAPI=5
 HOMEPAGE=http://squashfs.sourceforge.net
 IUSE=+xz lzma lz4 lzo xattr
-KEYWORDS=~alpha amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+KEYWORDS=~alpha amd64 ~arm ~arm64 hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=sys-libs/zlib !xz? ( !lzo? ( sys-libs/zlib ) ) lz4? ( app-arch/lz4 ) lzma? ( app-arch/xz-utils ) lzo? ( dev-libs/lzo ) xattr? ( sys-apps/attr ) xz? ( app-arch/xz-utils )
 SLOT=0
 SRC_URI=mirror://sourceforge/squashfs/squashfs4.3.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
-_md5_=025f3c45db40e8505aa0fc97fc0625a9
+_md5_=35e44b19c74da3cac44d3f37af56f612
