@@ -18,13 +18,13 @@ DIST Singular-3-1-6.tar.gz 25535111 SHA256 7956a17a0b5d428fea25bc0bc6c19c753748f
 DIST singular-4.0.2-share.tar.gz 8789162 SHA256 fe81cb100f3b73b159eb4a8122a29bc0f7705ef6f62ad55b68b5582c1ec0642d SHA512 068827df04a5d1b4407dbaab1296d0120071dc109b749037b02263d51906852a5c2c1ef321733953a181c2d3d0fe799c197ef0af3b9341810ecf31a5324e0a25 WHIRLPOOL 615487e95e32d9f07552e92ebcd46e3071d110dd31e7d980b01340d22a5205ba2d771532fad1bf44863a38820428157284a171e0b901861fda6e51482d546adc
 DIST singular-4.0.2.tar.gz 8635172 SHA256 c105a2c8ace0b3c9189b782ed63660ce235407d0160907c2cafc2128d36d8cb7 SHA512 4543a45839ce8adc45e3b2edd84a6e398b7ba157da1eda050dbce2a8b20333eb0c63433e3e7eaf59d76bf6bcb65c1b1611bfc08c25fd493c88e2f06624898e3d WHIRLPOOL fe30bc87c6b403b2e30bd1c016aeeb015c2a64a63d87b81536dc53a2555ac068f3e0c6d8763775d8be5e5e1a935aadab1c86b603cbb698234a19cc9cfffac282
 EBUILD singular-3.1.6.ebuild 4770 SHA256 76405ee23daaff5d73b42e96c18e93a56277c6d3ecb1f32b7fa6df9b22a76d8d SHA512 0308de0e31ec6f8e5801a3375f43f52970d0e173ae48484ddfa074021535d82962ba494a4bc200b4e41c0e3a59702499003b2330ce03806081bf1bdac9b7ec12 WHIRLPOOL 752fa5fdff5f4e719af2ca8edc4ebc90ce8744ede046f7f5b8a7d0f9d142dbc7b8dbbb1d77abc39867337adbe44250af40b286cb59598c24334533fbbd4517a5
-EBUILD singular-4.0.2.ebuild 4011 SHA256 9d7255cebe5ecce24a6bfab2ad859e2f49c081b66f2304f3ef2a47cd2081048a SHA512 36592bc11624ef50cf4fed13d865ba000a93dcf6826b3799fb2f967524ca01797c72e97cf44162795943559ffd007b312b89d54c34d52cd8ffa96883a848fd8b WHIRLPOOL 51caf21ac5ca048b0ae8f634931b8b4d2f0300ffbfbd004e1e4139adf8d387addeb2e851cf39eb9102da6ad3ecba1557b2aa5d9eefc4a1d0395afae338d64b50
-MISC ChangeLog 13454 SHA256 b0973e4131d02f35d1beab6cd5486c8d70c11da2ca814c9a99a7b693c76612ba SHA512 a2d45a85bd49972759f3036df8bcb702b58e14cb572b662086fcdd28e90ad2d9428f1fb2c425719c23538372d37d65281ceb4243003ff592eb48c85db9ebbc5d WHIRLPOOL 0f19f4f3b2b6561ba161b9a149b880d9f3dae0f9367c92a92ccdd1b2195c1c801e65aa9df603189d583fc772d4b85baec5267bbe62ca783a2cb356c242f22245
+EBUILD singular-4.0.2.ebuild 4028 SHA256 290eeb419272754022bef779a10d2ddb6203fcf9d5aeb48f7873d606588d4307 SHA512 1f3bccf11b9762d4d663f46516ff92ca67834a3502c1f149b80c27399c43d9229967376e5333b926ec59f917da6da7800567b0cf1a57c4d45a93d4446220c036 WHIRLPOOL bfe7b1e2fd1be92c2a812538758b6120a5da8d0f19235d06e45b73ff212cacd7cfa937b0aa61c67b8ce26c2cbd8afdf4d7b6bffb1580904d75c219a6aed11adb
+MISC ChangeLog 13562 SHA256 26307867b48af518a6fb26bd1ec5cbe9c1bc14ab8a1de18542befaac59e642d4 SHA512 60bd2b7e131ae7c1b5593a20267038cdc1ac14b9492f7424d84b53179e43ff245374dd698bf560ac58be22a67f47040358041cda7d153013edefd841ce13adfb WHIRLPOOL 1f4ce5ae7df5b78e3d1c7654aad96ffd9b55319068f253a920bfb85a260d09fb4ddba9006542bcde0f29936a0c809497f637034ddfd1f7aa3c2f51be14f9c5cc
 MISC metadata.xml 381 SHA256 784d034201d00e1cf426a61486184b5178702a00dbaa4be3740a462c45cc1312 SHA512 5896b2b956ca1405616871bdb55981b94a22cb4b4f6483096429ec8b010d522d32d9e4eb0a87bc040aab6d3ff8007f1b0f3172d7994f74a408dd9628e89dc08d WHIRLPOOL d5b8312b3aed717bcf191dccad086994456e413a0444d11c216e96a416b4cf1d3c4903ba187cdee3e61a9dddaa1858958766e0782b28ab8ff6c6d5fa86b7eaac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlT9pVYACgkQid6yGVZcMrxIvgD+NOCYG1gCLOyp5rBkDKR4nsz7
-m32ihprs2xzTE+1jlN0A/jrqv+N9K6Fpj5i67zfPiBykms+MT18UX2yyTF9LOpJF
-=PKYy
+iF4EAREIAAYFAlT/Qp4ACgkQid6yGVZcMrzCHgEAoVuAsmsW8Cdnn/ybFNbfnlH6
+j1PDnN7TEj1ODti0ATwA/Rcj4l5WXtvJgqcMt6S0qLPO3PDDmWzr7dZfIvpD2wnN
+=ZKXt
 -----END PGP SIGNATURE-----
